# Course2

./: pyproject.toml  requirements.txt
deactivate/: pyvenv.cfg
deactivate/Scripts/: activate  activate.bat
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
