[tool.poetry]
name = "course2"
version = "0.1.0"
description = ""
authors = ["Matthew Travis Alcantara <matthew.alcantara@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
matplotlib = "^3.10.7"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
pytest = "^8.4.2"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
